--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "node ace build",
-    "start": "node ace serve --watch"
+    "start": "npm run build && node build/server.js"
   },
   "devDependencies": {
     "@adonisjs/assembler": "^1.3.6",
